# kursach

./: .env  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pylint.yml
app/: __init__.py  __main__.py
app/bot/: __init__.py  utils.py
app/calc/: __init__.py
bot/: __init__.py  __main__.py  markup.py
docs/: kursach.docx  ~$ТЗ.docx  ТЗ.docx
src/: bot.py  calc.py  main.py  test_bot.py  test_calc.py  test_utils.py  utils.py
