[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["unlomtrois <vadim.kuz02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bot:main"