[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["unlomtrois <vadim.kuz02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bot:main"